--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
   <body>
     <a-scene>
       <!-- Sky for immersion -->
-      <a-sky color="#000"></a-sky>
+      <a-sky color="#262626"></a-sky>
 
       <!-- Scatterplot Container -->
       <a-entity id="scatterplot-container" position="0 1.6 -3" rotation="0 0 0" drag-rotate-component>
-        <!-- Axes -->
+        <!-- X-axis (Completeness Rating) -->
         <a-entity line="start: -3 0 0; end: 3 0 0; color: red"></a-entity>
         <a-text value="Completeness Rating" position="3 0 0" rotation="0 0 0"></a-text>
 
+        <!-- Y-axis (PtPG) -->
         <a-entity line="start: 0 -3 0; end: 0 3 0; color: green"></a-entity>
-        <a-text value="Weighted Rating" position="0 3 0" rotation="0 0 0"></a-text>
+        <a-text value="PtPG" position="0 3 0" rotation="0 0 0"></a-text>
 
+        <!-- Z-axis (Weighted Rating) -->
         <a-entity line="start: 0 0 -3; end: 0 0 3; color: blue"></a-entity>
-        <a-text value="PtPG" position="0 0 3" rotation="0 0 0"></a-text>
+        <a-text value="Weighted Rating" position="0 0 3" rotation="0 0 0"></a-text>
 
         <!-- Scatterplot -->
         <a-entity id="scatterplot"></a-entity>
@@ -44,19 +46,23 @@
           }
 
           // Set min/max for scaling (replace with actual values)
-          const zMin = 0, zMax = 5;
+          const xMin = 0, xMax = 100; // Completeness Rating
+          const yMin = 0, yMax = 2;   // PtPG
+          const zMin = 0, zMax = 100; // Weighted Rating
 
           data.forEach(point => {
-            const { 'Completeness Rating': x, 'Weighted_Rating': y, PtPG: z, 'Player Name': name } = point;
+            const { 'Completeness Rating': x, 'PtPG': y, 'Weighted_Rating': z, 'Player Name': name } = point;
 
+            const scaledX = scale(x, xMin, xMax, -5, 5);
+            const scaledY = scale(y, yMin, yMax, -5, 5);
             const scaledZ = scale(z, zMin, zMax, -5, 5);
 
             const sphere = document.createElement('a-sphere');
-            sphere.setAttribute('position', `${x} ${y} ${scaledZ}`);
+            sphere.setAttribute('position', `${scaledX} ${scaledY} ${scaledZ}`);
             sphere.setAttribute('radius', 0.1);
-            sphere.setAttribute('color', `hsl(${240 - 240 * (z / zMax)}, 100%, 50%)`);
+            sphere.setAttribute('color', `hsl(${240 - 240 * (y / yMax)}, 100%, 50%)`); // Color based on PtPG
             sphere.setAttribute('hoverable', true);
-            sphere.setAttribute('tooltip', `Player: ${name}\nPtPG: ${z.toFixed(2)}`);
+            sphere.setAttribute('tooltip', `Player: ${name}\nPtPG: ${y.toFixed(2)}`);
 
             scatterplot.appendChild(sphere);
           });
@@ -64,3 +70,4 @@
     </script>
   </body>
 </html>
+
