--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
       <a-entity>
         <!-- X-axis (Completeness Rating) -->
         <a-box position="0 0 0" width="10" height="0.05" depth="0.05" color="red"></a-box>
-        <a-text value="Completeness Rating" position="10 0 0.5" rotation="0 0 0" color="red"></a-text>
+        <a-text value="Completeness Rating" position="11 0 0.5" rotation="0 0 0" color="red"></a-text>
 
         <!-- Y-axis (PtPG) -->
         <a-box position="0 0 0" width="0.05" height="10" depth="0.05" color="green"></a-box>
-        <a-text value="PtPG" position="0 10 0.5" rotation="0 0 0" color="green"></a-text>
+        <a-text value="PtPG" position="0 11 0.5" rotation="0 0 0" color="green"></a-text>
 
         <!-- Z-axis (Weighted Rating) -->
         <a-box position="0 0 0" width="0.05" height="0.05" depth="10" color="blue"></a-box>
-        <a-text value="Weighted Rating" position="0 0 10.5" rotation="0 0 0" color="blue"></a-text>
+        <a-text value="Weighted Rating" position="0 0 11" rotation="0 0 0" color="blue"></a-text>
       </a-entity>
 
       <!-- Data Points -->
       <a-entity id="scatterplot"></a-entity>
 
       <!-- Camera -->
-      <a-camera position="0 5 15">
+      <a-camera position="0 5 20">
         <a-cursor></a-cursor>
       </a-camera>
     </a-scene>
@@ -47,17 +47,22 @@
       data.forEach(point => {
         const { 'Completeness Rating': x, 'Weighted_Rating': z, PtPG: y, 'Player Name': name } = point;
 
+        // Scale values for better visibility in 3D space
+        const scaledX = x * 2;
+        const scaledY = y * 2; // PtPG properly mapped as height
+        const scaledZ = z * 2;
+
         // Create sphere for each data point
         const sphere = document.createElement('a-sphere');
-        sphere.setAttribute('position', `${x * 2} ${y * 2} ${z * 2}`);
-        sphere.setAttribute('radius', 0.2);
+        sphere.setAttribute('position', `${scaledX} ${scaledY} ${scaledZ}`);
+        sphere.setAttribute('radius', 0.3);
         sphere.setAttribute('color', '#FF5733');
         sphere.setAttribute('hoverable', true);
 
         // Add hover label
         const tooltip = document.createElement('a-text');
         tooltip.setAttribute('value', name);
-        tooltip.setAttribute('position', `${x * 2} ${y * 2 + 0.5} ${z * 2}`);
+        tooltip.setAttribute('position', `${scaledX} ${scaledY + 0.5} ${scaledZ}`);
         tooltip.setAttribute('color', 'white');
         tooltip.setAttribute('scale', '1 1 1');
         scatterplot.appendChild(tooltip);
