--- a/index.html
+++ b/index.html
@@ -35,40 +35,41 @@
     </a-scene>
 
     <script>
-      // Mock Data
-      const data = [
-        { 'Completeness Rating': 1, 'Weighted_Rating': 2, PtPG: 3, 'Player Name': 'Player 1' },
-        { 'Completeness Rating': 4, 'Weighted_Rating': 5, PtPG: 6, 'Player Name': 'Player 2' },
-        { 'Completeness Rating': 7, 'Weighted_Rating': 8, PtPG: 9, 'Player Name': 'Player 3' }
-      ];
+      // Fetch actual data from scatter_data.json
+      fetch('scatter_data.json')
+        .then(response => response.json())
+        .then(data => {
+          const scatterplot = document.getElementById('scatterplot');
 
-      const scatterplot = document.getElementById('scatterplot');
+          data.forEach(point => {
+            const { 'Completeness Rating': x, 'Weighted_Rating': z, PtPG: y, 'Player Name': name } = point;
 
-      data.forEach(point => {
-        const { 'Completeness Rating': x, 'Weighted_Rating': z, PtPG: y, 'Player Name': name } = point;
+            // Scale values for better visibility in 3D space
+            const scaledX = x * 2;
+            const scaledY = y * 2; // PtPG properly mapped as height
+            const scaledZ = z * 2;
 
-        // Scale values for better visibility in 3D space
-        const scaledX = x * 2;
-        const scaledY = y * 2; // PtPG properly mapped as height
-        const scaledZ = z * 2;
+            // Create sphere for each data point
+            const sphere = document.createElement('a-sphere');
+            sphere.setAttribute('position', `${scaledX} ${scaledY} ${scaledZ}`);
+            sphere.setAttribute('radius', 0.3);
+            sphere.setAttribute('color', '#FF5733');
+            sphere.setAttribute('hoverable', true);
 
-        // Create sphere for each data point
-        const sphere = document.createElement('a-sphere');
-        sphere.setAttribute('position', `${scaledX} ${scaledY} ${scaledZ}`);
-        sphere.setAttribute('radius', 0.3);
-        sphere.setAttribute('color', '#FF5733');
-        sphere.setAttribute('hoverable', true);
+            // Add hover label
+            const tooltip = document.createElement('a-text');
+            tooltip.setAttribute('value', `${name}\nPtPG: ${y.toFixed(2)}`);
+            tooltip.setAttribute('position', `${scaledX} ${scaledY + 0.5} ${scaledZ}`);
+            tooltip.setAttribute('color', 'white');
+            tooltip.setAttribute('scale', '1 1 1');
+            scatterplot.appendChild(tooltip);
 
-        // Add hover label
-        const tooltip = document.createElement('a-text');
-        tooltip.setAttribute('value', name);
-        tooltip.setAttribute('position', `${scaledX} ${scaledY + 0.5} ${scaledZ}`);
-        tooltip.setAttribute('color', 'white');
-        tooltip.setAttribute('scale', '1 1 1');
-        scatterplot.appendChild(tooltip);
-
-        scatterplot.appendChild(sphere);
-      });
+            scatterplot.appendChild(sphere);
+          });
+        })
+        .catch(error => {
+          console.error("Error loading scatter_data.json:", error);
+        });
     </script>
   </body>
 </html>
